--- a/src/gyak2.tex
+++ b/src/gyak2.tex
@@ -68,7 +68,7 @@
             \includestandalone[scale = 0.7]{../grafok/bfs}
         \end{figure}
 
-        \item Indítsunk BFS-t az alábbi gráfok súlyozatlan változatának az $s$ pontjaiból! Határozzuk meg a legrövidebb utakat az alábbi súlyozott gráfokban az $s$ és a $t$ csúcs között!
+        \item Indítsunk BFS-t az alábbi gráfok súlyozatlan változatának az $s$ pontjaiból! Határozzuk meg a legrövidebb utakat ezekben a súlyozatlan gráfokban az $s$ és a $t$ csúcs között!
         \begin{figure}[!h]
             \centering \hfill
             \includestandalone[scale=0.7]{../grafok/dijkstra1}\hfill
